src/web/assets/scss/style.scss
@import 'spectre.css';

$base-color: #5755d9;
$error-color: #d24444;

body {
  max-height: 100vh;
  max-width: 100vw;
}

header.navbar {
  height: 8vh;
}

h1,
h2 {
  text-align: center;
}

.info-display {
  display: none;

  > div {
    max-width: 80%;

    > pre {
      white-space: pre-line;
    }
  }

  &.active {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background: $error-color;
    z-index: 9;
    color: #fff;
  }
}

.container {
  max-height: 92vh;
}

.column {
  padding: 0.5rem;
}

.resizable-w {
  resize: horizontal;
}

.resizable-h {
  resize: vertical;
}

.main-input {
  border-right: 2px solid $base-color;
  border-radius: 0.1rem;
  padding: 0.5rem;
  height: 90vh;
  overflow-y: auto;
}

section.data-container {
  height: 92vh;
  overflow-y: scroll;
  position: relative;
}

.chart-container {
  position: relative;
  width: 100%;
}

.data-view {
  word-wrap: break-word;
  margin-top: 3rem;
}

div {
  &.btn-group {
    display: flex;
    width: 100%;
    justify-content: flex-end;

    button.btn {
      flex: 0 0 auto;
    }
  }

  &.action-btn {
    display: flex;
    justify-content: space-evenly;
  }
}

button#download-button {
  margin: 0.5rem auto;
}

.loading {
  display: none;
  &.active {
    display: block;
  }
}

